Adicionei um parágrafo

--- a/Site Exemplo/index.html
+++ b/Site Exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam reprehenderit accusantium vitae repellat ad obcaecati voluptates incidunt saepe provident, fugiat, laborum doloremque aspernatur? Perspiciatis sint dicta architecto, quia quas tenetur.</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, magnam est! Eveniet recusandae explicabo quas, tenetur dolore, esse dolores laboriosam ex blanditiis deleniti quaerat ducimus totam harum amet soluta repudiandae.</p>
 </body>
 </html>
